--- a/src/components/headItem/sortingItem.module.scss
+++ b/src/components/headItem/sortingItem.module.scss
@@ -1,8 +1,12 @@
 .button {
   font-weight: bold;
   font-size: 25px;
-  width: 100%;
+  min-width: 100%;
   border: none;
   background: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
