--- a/src/components/productsList/productsList.module.scss
+++ b/src/components/productsList/productsList.module.scss
@@ -1,3 +1,30 @@
+.basket{
+  margin-top: 20px;
+  .basketWrapper{
+    margin-bottom: 20px;
+    position: relative;
+    width: fit-content;
+    margin-left: auto;
+    .basketBody{
+      width: 60px;
+      height: 60px;
+      z-index: 0;
+    }
+    span{
+      position: absolute;
+      top: 16px;
+      left: 28px;
+      display: flex;
+      justify-content: center;
+      width: 25px;
+      font-weight: bold;
+      font-style: normal;
+      font-family: Geneva, Arial, Helvetica, sans-serif;
+      color: brown;
+      z-index: 9;
+    }
+  }
+}
 .table {
   .wrapper {
     table {
