--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -20,11 +20,12 @@ svg {
 .default {
   fill: lightgray;
 }
-.asc,.desc {
+.asc,
+.desc {
   fill: black;
 }
 
-.desc{
+.desc {
   transform: rotateX(180deg);
   margin-top: 3px;
 }
