--- a/src/components/productsList/productsList.module.scss
+++ b/src/components/productsList/productsList.module.scss
@@ -5,6 +5,7 @@
     position: relative;
     width: fit-content;
     margin-left: auto;
+    display: flex;
     .basketBody {
       width: 60px;
       height: 60px;
@@ -25,26 +26,26 @@
     }
   }
 }
-.table {
-  .wrapper {
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      border: 3px solid black;
-      thead {
-        font-weight: bold;
-        font-size: 25px;
-        th {
-          border: 1px solid black;
-        }
-      }
-
-      tbody {
-        td {
-          border: 1px solid black;
-          padding: 5px;
-        }
-      }
-    }
-  }
-}
+//.table {
+//  .wrapper {
+//    table {
+//      width: 100%;
+//      border-collapse: collapse;
+//      border: 3px solid black;
+//      thead {
+//        font-weight: bold;
+//        font-size: 25px;
+//        th {
+//          border: 1px solid black;
+//        }
+//      }
+//
+//      tbody {
+//        td {
+//          border: 1px solid black;
+//          padding: 5px;
+//        }
+//      }
+//    }
+//  }
+//}
