--- a/src/components/tableBody/tableBody.module.scss
+++ b/src/components/tableBody/tableBody.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  &__del,&__add {
+  &__del,
+  &__add {
     color: white;
     font-size: 20px;
     font-weight: bold;
@@ -13,10 +14,10 @@
     justify-content: center;
     align-items: center;
   }
-  &__del{
+  &__del {
     background: brown;
   }
-  &__add{
+  &__add {
     background: olive;
   }
 }
