--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -8,7 +8,8 @@
 }
 
 .container {
-  max-width: 80%;
+  max-width: 90%;
+  width: 1140px;
   margin: 0 auto;
 }
 
@@ -24,7 +25,6 @@ svg {
 .asc,
 .desc {
   fill: black;
-
 }
 
 .desc {
